more auth stuff
create propiedad - arrendador
create solicitud - arrendatario