@@ -1,39 +1,42 @@
 package com.proyecto1.web.services;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.proyecto1.web.dto.solicitudes_dto;
+import com.proyecto1.web.entities.EstadoSolicitud;
+import com.proyecto1.web.entities.arrendatario;
+import com.proyecto1.web.entities.solicitudes;
+import com.proyecto1.web.repositories.EstadoSolicitud_repository;
+import com.proyecto1.web.repositories.solicitudes_repository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.proyecto1.web.dto.solicitudes_dto;
-import com.proyecto1.web.entities.solicitudes;
-import com.proyecto1.web.repositories.solicitudes_repository;
-
-import jakarta.transaction.Transactional;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class solicitudes_service {
 
-    private solicitudes_repository solicitudes_repository;
-    private ModelMapper modelMapper;
+    private final solicitudes_repository solicitudes_repository;
+    private final EstadoSolicitud_repository estadoSolicitud_repository;
+    private final ModelMapper modelMapper;
 
     private final String message = "La solicitud con ID: ";
     private final String noExiste = " no existe";
     private final String noPuedeSEEEERRR = " no existe y por lo tanto no puede ser eliminada";
 
     @Autowired
-    public solicitudes_service(solicitudes_repository solicitudes_repository, ModelMapper modelMapper) {
+    public solicitudes_service(solicitudes_repository solicitudes_repository, EstadoSolicitud_repository estadoSolicitud_repository, ModelMapper modelMapper) {
         this.solicitudes_repository = solicitudes_repository;
+        this.estadoSolicitud_repository = estadoSolicitud_repository;
         this.modelMapper = modelMapper;
     }
 
-    //GET BY ID
+    // GET BY ID
     @Transactional
     public solicitudes_dto get(Long id) {
         Optional<solicitudes> solicitudes_optional = solicitudes_repository.findById(id);
@@ -43,24 +46,42 @@ public class solicitudes_service {
         return modelMapper.map(solicitudes_optional.get(), solicitudes_dto.class);
     }
 
-    //RETURN SOLICITUDES LIST
+    // RETURN SOLICITUDES LIST
     @Transactional
-    public List<solicitudes_dto> getAll( ){
+    public List<solicitudes_dto> getAll() {
         List<solicitudes> solicitudesList = (List<solicitudes>) solicitudes_repository.findAll();
-        return solicitudesList.stream().map(solicitudes -> modelMapper.map(solicitudes, solicitudes_dto.class)).toList();
+        return solicitudesList.stream().map(solicitudes -> modelMapper.map(solicitudes, solicitudes_dto.class)).collect(Collectors.toList());
     }
 
-    //SAVE SOLICITUDES
+    // SAVE SOLICITUDES
     @Transactional
-    public solicitudes_dto save(solicitudes_dto solicitudes_dto){
+    public solicitudes_dto save(solicitudes_dto solicitudes_dto) {
         solicitudes solicitudes = modelMapper.map(solicitudes_dto, solicitudes.class);
+
+        // Ensure that EstadoSolicitud is managed
+        final EstadoSolicitud estadoSolicitud = solicitudes.getEstadoSolicitud();
+        if (estadoSolicitud != null) {
+            final EstadoSolicitud managedEstadoSolicitud;
+            if (estadoSolicitud.getId_EstadoSolicitud() == 0) {
+                managedEstadoSolicitud = estadoSolicitud_repository.save(estadoSolicitud);
+            } else {
+                managedEstadoSolicitud = estadoSolicitud_repository.findById(estadoSolicitud.getId_EstadoSolicitud())
+                        .orElseThrow(() -> new IllegalArgumentException("Invalid EstadoSolicitud ID: " + estadoSolicitud.getId_EstadoSolicitud()));
+            }
+            solicitudes.setEstadoSolicitud(managedEstadoSolicitud);
+        } else {
+            EstadoSolicitud defaultEstadoSolicitud = estadoSolicitud_repository.findById(1L)
+                    .orElseThrow(() -> new IllegalArgumentException("Default EstadoSolicitud ID: 1 not found"));
+            solicitudes.setEstadoSolicitud(defaultEstadoSolicitud);
+        }
+
         solicitudes = solicitudes_repository.save(solicitudes);
         return modelMapper.map(solicitudes, solicitudes_dto.class);
     }
 
-    //DELETE SOLICITUDES BY ID
+    // DELETE SOLICITUDES BY ID
     @Transactional
-    public void delete(Long id){
+    public void delete(Long id) {
         if (!solicitudes_repository.existsById(id)) {
             throw new IllegalArgumentException(message + id + noPuedeSEEEERRR);
         }
@@ -85,6 +106,44 @@ public class solicitudes_service {
             return solicitudesList.stream()
                     .map(solicitudes -> modelMapper.map(solicitudes, solicitudes_dto.class))
                     .collect(Collectors.toList());
+        } else {
+            throw new IllegalStateException("Unexpected principal type: " + principal.getClass().getName());
+        }
+    }
+
+    @Transactional
+    public List<solicitudes_dto> getAllSolicitudesByPropiedadId(Long idPropiedad) {
+        List<solicitudes> solicitudesList = solicitudes_repository.findAllByPropiedadIdPropiedad(idPropiedad);
+        return solicitudesList.stream()
+                .map(solicitud -> modelMapper.map(solicitud, solicitudes_dto.class))
+                .collect(Collectors.toList());
+    }
+
+    @Transactional
+    public solicitudes_dto saveForAuthenticatedUser(solicitudes_dto solicitudesDto) {
+        Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        if (principal instanceof String) {
+            String jsonString = (String) principal;
+            Long authenticatedUserId;
+            try {
+                ObjectMapper objectMapper = new ObjectMapper();
+                JsonNode jsonNode = objectMapper.readTree(jsonString);
+                authenticatedUserId = jsonNode.get("id").asLong();
+            } catch (Exception e) {
+                throw new RuntimeException("Failed to parse JSON string: " + jsonString, e);
+            }
+
+            solicitudes solicitudes = modelMapper.map(solicitudesDto, solicitudes.class);
+            arrendatario arrendatario = new arrendatario();
+            arrendatario.setId_arrendatario(authenticatedUserId);
+            solicitudes.setArrendatario(arrendatario);
+
+            EstadoSolicitud defaultEstadoSolicitud = estadoSolicitud_repository.findById(1L)
+                    .orElseThrow(() -> new IllegalArgumentException("Default EstadoSolicitud ID: 1 not found"));
+            solicitudes.setEstadoSolicitud(defaultEstadoSolicitud);
+
+            solicitudes = solicitudes_repository.save(solicitudes);
+            return modelMapper.map(solicitudes, solicitudes_dto.class);
         } else {
             throw new IllegalStateException("Unexpected principal type: " + principal.getClass().getName());
         }
